# rank-bandit-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: TUTORIAL.md
notebooks/: bandit_walkthrough.ipynb  scenario_gallery.ipynb  sweep_comparison.ipynb
src/rank_bandit_lab/: __init__.py  cli.py  compare.py  environment.py  logging.py  policies.py  scenario_loader.py  simulator.py  sweep.py  types.py  visualize.py
src/rank_bandit_lab/scenarios/: __init__.py  ecommerce_longtail.json  education_catalog.json  news_headlines.json  video_streaming.json
tests/: test_compare.py  test_environment.py  test_logging.py  test_policies.py  test_scenarios.py  test_simulator.py  test_sweep.py  test_visualize.py
