[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rank-bandit-lab"
version = "0.1.0"
description = "Educational ranking bandit simulation lab."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Rank Bandit Lab Contributors" }
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
rank-bandit-lab = "rank_bandit_lab.cli:main"
rank-bandit-lab-compare = "rank_bandit_lab.compare:main"
rank-bandit-lab-sweep = "rank_bandit_lab.sweep:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rank_bandit_lab"]
package-data = { "rank_bandit_lab" = ["scenarios/*.json"] }

[tool.hatch.build.targets.sdist]
include = [
  "src/rank_bandit_lab",
  "README.md",
  "LICENSE",
  "src/rank_bandit_lab/scenarios/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
mypy_path = ["src"]
exclude = ["notebooks"]
